blockml/test/errors/01_yaml/e117/e117_one.view
view: e117_one
table: 1
fields:
- dimension: dim1
  sql: 111

- dimension: dim2
  sql: 111

- calculation: calc1
  sql: ${dim1}*2
